<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>QCM</groupId>
  <artifactId>QCM</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <build>
    <sourceDirectory>src</sourceDirectory>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-war-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <warSourceDirectory>WebContent</warSourceDirectory>
          <failOnMissingWebXml>false</failOnMissingWebXml>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
  	 <dependency>  
   		<groupId>javax.servlet</groupId>  
   		<artifactId>javax.servlet-api</artifactId>  
  		<version>3.1.0</version>  
  	</dependency>  
  	
  	<!-- SPRING -->
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-context</artifactId>
  		<version>4.2.6.RELEASE</version>
  	</dependency>
  	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-aop</artifactId>
  		<version>4.2.6.RELEASE</version>
  	</dependency>
  	 <dependency>
   		<groupId>org.springframework</groupId>
   		<artifactId>spring-orm</artifactId>
   		<version>4.2.6.RELEASE</version>
	</dependency>
	<dependency>
    	<groupId>org.springframework</groupId>
    	<artifactId>spring-jdbc</artifactId>
    	<version>4.2.6.RELEASE</version>
	</dependency>
	<dependency>
    	<groupId>org.springframework</groupId>
  		<artifactId>spring-test</artifactId>
    	<version>4.2.6.RELEASE</version>
    	<scope>test</scope>
	</dependency>
  	<dependency>  
   		<groupId>org.springframework</groupId>  
   		<artifactId>spring-webmvc</artifactId>  
		<version>4.2.6.RELEASE</version>
 	 </dependency>  
 	 
 	 	<!-- tools -->
 	<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.2.3</version>
		</dependency>
		

 
  	<dependency>
  		<groupId>commons-logging</groupId>
  		<artifactId>commons-logging</artifactId>
  		<version>1.2</version>
  	</dependency>
  	
  		<!-- hibernate -->
  	<dependency>
  		<groupId>org.hibernate</groupId>
  		<artifactId>hibernate-core</artifactId>
  		<version>4.3.11.Final</version>
  	</dependency>
  	<dependency>
  		<groupId>org.hibernate</groupId>
  		<artifactId>hibernate-entitymanager</artifactId>
  		<version>4.3.11.Final</version>
  	</dependency>

  	
  	
  	<!-- test -->
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<version>4.11</version>
  		<scope>test</scope>
  	</dependency>
  
  	<!-- BDD -->
  <dependency>     
   	 	<groupId>org.hsqldb</groupId>
  	  	<artifactId>hsqldb</artifactId>
    	<version>2.3.1</version>
    	<type>jar</type>
    	<scope>test</scope>
	</dependency>
	
	  <dependency>
  		<groupId>postgresql</groupId>
  		<artifactId>postgresql</artifactId>
  		<version>9.1-901.jdbc4</version>
  	</dependency>

	<!-- JWT --> 
<dependency>
    <groupId>io.jsonwebtoken</groupId>
    <artifactId>jjwt</artifactId>
    <version>0.6.0</version>
</dependency>
	
  </dependencies>
</project>